# maze

./: pyproject.toml
maze/: main.py
maze/gui/: cell.py  line.py  point.py  window.py
maze/maze_generator/: maze_gui.py
tests/: tests.py
