[tool.poetry]
name = "maze"
version = "0.1.0"
description = ""
authors = ["Gabz Araujo <g.cardoso.araujo@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = 'maze.main:main'

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
